docs: improve README for project usability